tests/checker/bad/lib/BadADTLib3b.scilla
library BadADTLib3b

type TestType1 =
| Item1 of Int32
| Item2
